--- a/WordGame/WordGame/MainWindow.xaml
+++ b/WordGame/WordGame/MainWindow.xaml
@@ -2,31 +2,38 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordGame"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="100" />
-                <RowDefinition Height="50" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="50" />
-            <ColumnDefinition Width="50" />
-            <ColumnDefinition Width="50" />
-            <ColumnDefinition Width="50" />
-        </Grid.ColumnDefinitions>
-        <TabControl x:Name="tabControl" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="100" Margin="41,10,0,0" Grid.RowSpan="3" VerticalAlignment="Top" Width="100">
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="TabItem" Margin="-42,-20,38,18">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-        </TabControl>
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        Title="Sibel" Height="350" Width="525"
+        Background="{DynamicResource WindowBackgroundBrush}"
+        WindowStartupLocation="CenterScreen"
+        WindowState="Normal">
+    <Window.Resources>
+
+        <LinearGradientBrush x:Key="WindowBackgroundBrush">
+            <GradientStop Offset="0" Color="Silver" />
+            <GradientStop Offset="1" Color="Red" />
+        </LinearGradientBrush>
+    </Window.Resources>
+    <Grid Name="pnlMainGrid" MouseUp="pnlMainGrid_MouseUp">
+        <StackPanel Margin="10">
+            <WrapPanel>
+                <TextBlock.FontSize>50</TextBlock.FontSize>
+                <TextBlock Foreground="Blue" FontStyle="Italic">Seni</TextBlock>
+                <TextBlock Foreground="Red" FontStyle="Italic">sevi</TextBlock>
+                <TextBlock Foreground="Yellow" FontStyle="Italic">yorum</TextBlock>
+                <TextBlock Foreground="Green" FontStyle="Italic">Sibel!</TextBlock>
+            </WrapPanel>
+            <Button>
+                <Button.FontWeight>Bold</Button.FontWeight>
+                <Button.Content>
+                    <WrapPanel>
+                        <TextBlock Foreground="Blue">Multi</TextBlock>
+                        <TextBlock Foreground="Red">Color</TextBlock>
+                        <TextBlock>Button</TextBlock>
+                    </WrapPanel>
+                </Button.Content>
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
